Add chi to handle api requests. Implement QueryDB interface for CQRS queries.
